# cygsoft-open

./: .env  .gitignore  Cargo.toml  Readme.md  rust-toolchain.toml
src/: main.rs  utils.rs
src/driver/: mod.rs  physical_memory.rs  read_virtual_memory.rs
src/valorant/: agents.rs  maps.rs  mod.rs  offsets.rs  structs.rs  threads.rs  valorant_utils.rs  weapons.rs
src/webserver/: index.rs
static/: index.html  p5_module.js
