[package]
name = "cygnus_soft"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
debug-assertions = false
panic = "abort"
opt-level = "z"
lto = true
strip = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
winapi = { version = "0.3.9", features = ["ioapiset", "libloaderapi"] } 
env_logger = "0.11.3"
dotenv = "0.15.0"
ntapi = "0.4.1"
bitfield = "0.15.0"
phf = { version = "0.11.2", features = ["macros"] }
json = "0.12.4"
actix-web = "4.3.1"
actix-files = "0.6.2"
serde_json = "1.0.103"
once_cell = "1.18.0"
parking_lot = "0.12.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
goldberg = "0.1.0"
anyhow = "1.0.72"
chrono = "0.4.23"
tokio = { version = "1.29.1", features = ["full"] }
actix-web-actors = "4.2.0"
actix = "0.13.0"


[dependencies.windows]
version = "0.56"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming"
]
